<?xml version="1.0" encoding="utf-8"?>
<com.oneplus.systemui.biometrics.OpQLRootView android:layout_width="wrap_content" android:layout_height="wrap_content" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textAppearance="@style/oneplus_contorl_text_style_title" android:textSize="@dimen/op_quick_launch_label_size" android:textColor="@color/oneplus_contorl_text_color_primary_dark" android:layout_gravity="bottom|center" android:id="@id/label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/op_quick_launch_label_margin_bottom" android:fontFamily="@string/oneplus_contorl_font_family_title" />
    <com.oneplus.systemui.biometrics.OpQLRecyclerView android:layout_gravity="bottom|center" android:id="@id/icon_scroller" android:paddingLeft="@dimen/op_quick_launch_recycler_view_padding_side" android:paddingTop="@dimen/op_quick_launch_recycler_view_padding_top" android:paddingRight="@dimen/op_quick_launch_recycler_view_padding_side" android:paddingBottom="@dimen/op_quick_launch_recycler_view_padding_bottom" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/op_quick_launch_recycler_view_margin_bottom" android:overScrollMode="never" />
    <TextView android:textAppearance="@style/oneplus_contorl_text_style_body1_local" android:textSize="@dimen/op_quick_launch_hint_size" android:textColor="@color/oneplus_contorl_text_color_primary_dark" android:layout_gravity="bottom|center" android:id="@id/hint" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/op_quick_launch_hint_margin_bottom" android:text="@string/quick_launch_exit_hint" android:fontFamily="@string/oneplus_contorl_font_family_title" />
    <FrameLayout android:layout_gravity="bottom" android:id="@id/track_view" android:layout_width="fill_parent" android:layout_height="@dimen/op_quick_launch_track_view_height" android:layout_marginLeft="@dimen/op_quick_launch_track_view_padding_side" android:layout_marginRight="@dimen/op_quick_launch_track_view_padding_side" android:layout_marginBottom="@dimen/op_quick_launch_track_view_margin_bottom">
        <ImageView android:layout_gravity="center" android:id="@id/track_view_background" android:background="@drawable/qs_scrubber_track" android:layout_width="fill_parent" android:layout_height="@dimen/op_quick_launch_track_view_background_height" android:backgroundTint="#55ffffff" />
    </FrameLayout>
    <View android:layout_gravity="bottom|center" android:id="@id/cancel_area" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="@dimen/op_quick_launch_cancel_view_height" android:alpha="0.0" />
    <TextView android:textAppearance="@style/oneplus_contorl_text_style_title" android:textSize="@dimen/op_quick_launch_label_size" android:textColor="@color/oneplus_contorl_text_color_primary_dark" android:layout_gravity="bottom|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/op_quick_launch_cancel_text_view_margin_bottom" android:text="@string/quick_launch_exit" android:textAllCaps="true" android:fontFamily="@string/oneplus_contorl_font_family_title" />
</com.oneplus.systemui.biometrics.OpQLRootView>